# twitch-cursed

./: CMakeLists.txt  README.md  config.cfg  configFile.cpp  configFile.h  main.cpp  pluginBase.cpp  pluginBase.h  twitch.cpp  twitch.h
plugins/: favourites.cc  gameLister.cc  systemInfo.cc
